--- a/eleve.html
+++ b/eleve.html
@@ -62,8 +62,11 @@
             document.getElementById('studentName').textContent = `${name}`;
         }
     </script>
+  <script src="db.js"></script>
   <script src="exercice.js"></script>
+  <script src="db.js"></script>
   <script src="exercice6.js"></script>
+  <script src="db.js"></script>
   <script src="exercice7.js"></script>
 
 </body>
