--- a/eleve.html
+++ b/eleve.html
@@ -52,6 +52,10 @@
     <h2>Je sais dénombrer</h2>
     <div id="exercice7"></div>
 </section>
+<section>
+    <h2>Exercice 8 - Colorier les jours de la semaine</h2>
+    <div id="exercice8"></div>
+</section>
 
    
 
@@ -68,6 +72,8 @@
   <script src="exercice6.js"></script>
   <script src="db.js"></script>
   <script src="exercice7.js"></script>
+  <script src="db.js"></script>
+  <script src="exercice8.js"></script>
 
 </body>
 </html>
