--- a/index.html
+++ b/index.html
@@ -7,105 +7,133 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
             margin: 20px;
         }
-        h1 {
-            color: #333;
-        }
-        #container {
-            margin: auto;
-            max-width: 400px;
-        }
-        input, button {
-            margin: 5px;
-            padding: 8px;
-            font-size: 14px;
-        }
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-        li {
+        #student-list li {
             margin: 5px 0;
-            padding: 5px;
-            background-color: #f9f9f9;
-            border: 1px solid #ccc;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
         }
-        .delete-btn {
-            background-color: #ff5555;
-            color: white;
-            border: none;
-            padding: 5px 8px;
-            cursor: pointer;
-        }
-        .delete-btn:hover {
-            background-color: #e04444;
-        }
-        .student-link {
-            text-decoration: none;
-            color: #007BFF;
-            font-weight: bold;
-            cursor: pointer;
-        }
-        .student-link:hover {
-            text-decoration: underline;
+        button {
+            margin-left: 10px;
         }
     </style>
 </head>
 <body>
     <h1>Liste des élèves</h1>
-    <div id="container">
-        <input type="text" id="studentName" placeholder="Entrez le nom de l'élève">
-        <button onclick="addStudent()">Ajouter</button>
-        <ul id="studentList"></ul>
-    </div>
+    <input type="text" id="student-name" placeholder="Entrez un nom d'élève">
+    <button id="add-student">Ajouter</button>
+    <ul id="student-list"></ul>
 
     <script>
-        document.addEventListener("DOMContentLoaded", loadStudents);
+        // IndexedDB functions
+        function openDB() {
+            return new Promise((resolve, reject) => {
+                const request = indexedDB.open("elevesDB", 1);
 
-        function addStudent() {
-            const input = document.getElementById('studentName');
-            const name = input.value.trim();
+                request.onupgradeneeded = (event) => {
+                    const db = event.target.result;
+                    if (!db.objectStoreNames.contains("eleves")) {
+                        db.createObjectStore("eleves", { keyPath: "id", autoIncrement: true });
+                    }
+                };
 
-            if (name) {
-                const ul = document.getElementById('studentList');
-                const li = document.createElement('li');
-                li.innerHTML = `<a href='eleve.html?name=${encodeURIComponent(name)}' class='student-link'>${name}</a> <button class='delete-btn' onclick='deleteStudent(this)'>Supprimer</button>`;
-                ul.appendChild(li);
-                saveStudents();
-                input.value = '';
-            }
-        }
-
-        function deleteStudent(button) {
-            const li = button.parentElement;
-            li.remove();
-            saveStudents();
-        }
-
-        function saveStudents() {
-            const ul = document.getElementById('studentList');
-            const students = [];
-            ul.querySelectorAll('li').forEach(li => {
-                const link = li.querySelector('a');
-                students.push(link.textContent);
+                request.onsuccess = (event) => resolve(event.target.result);
+                request.onerror = (event) => reject("Erreur d'ouverture de la base IndexedDB.");
             });
-            localStorage.setItem('studentList', JSON.stringify(students));
+        }
+
+        function saveStudents(students) {
+            return openDB().then((db) => {
+                return new Promise((resolve, reject) => {
+                    const transaction = db.transaction("eleves", "readwrite");
+                    const store = transaction.objectStore("eleves");
+
+                    // Clear old data
+                    store.clear().onsuccess = () => {
+                        // Add new data
+                        students.forEach((student) => {
+                            store.add({ name: student });
+                        });
+                        transaction.oncomplete = resolve;
+                        transaction.onerror = reject;
+                    };
+                });
+            });
         }
 
         function loadStudents() {
-            const savedStudents = JSON.parse(localStorage.getItem('studentList')) || [];
-            const ul = document.getElementById('studentList');
-            savedStudents.forEach(name => {
-                const li = document.createElement('li');
-                li.innerHTML = `<a href='eleve.html?name=${encodeURIComponent(name)}' class='student-link'>${name}</a> <button class='delete-btn' onclick='deleteStudent(this)'>Supprimer</button>`;
-                ul.appendChild(li);
+            return openDB().then((db) => {
+                return new Promise((resolve, reject) => {
+                    const transaction = db.transaction("eleves", "readonly");
+                    const store = transaction.objectStore("eleves");
+                    const request = store.getAll();
+
+                    request.onsuccess = () => resolve(request.result.map((entry) => entry.name));
+                    request.onerror = reject;
+                });
             });
         }
+
+        // DOM manipulation and persistence
+        const studentList = document.getElementById("student-list");
+        const studentNameInput = document.getElementById("student-name");
+        const addStudentButton = document.getElementById("add-student");
+
+        let students = [];
+
+        // Add student
+        function addStudent(name) {
+            if (!name.trim()) return;
+            students.push(name.trim());
+            renderStudents();
+            saveStudents(students).catch(console.error);
+        }
+
+        // Remove student
+        function removeStudent(index) {
+            students.splice(index, 1);
+            renderStudents();
+            saveStudents(students).catch(console.error);
+        }
+
+        // Render student list
+        function renderStudents() {
+            studentList.innerHTML = "";
+            students.forEach((student, index) => {
+                const li = document.createElement("li");
+                li.textContent = student;
+
+                const removeButton = document.createElement("button");
+                removeButton.textContent = "Supprimer";
+                removeButton.onclick = () => removeStudent(index);
+
+                li.appendChild(removeButton);
+                studentList.appendChild(li);
+            });
+        }
+
+        // Load students on page load
+        window.addEventListener("DOMContentLoaded", () => {
+            loadStudents()
+                .then((loadedStudents) => {
+                    students = loadedStudents;
+                    renderStudents();
+                })
+                .catch(console.error);
+        });
+
+        // Add student on button click
+        addStudentButton.addEventListener("click", () => {
+            addStudent(studentNameInput.value);
+            studentNameInput.value = "";
+        });
+
+        // Add student on "Enter" key press
+        studentNameInput.addEventListener("keypress", (event) => {
+            if (event.key === "Enter") {
+                addStudent(studentNameInput.value);
+                studentNameInput.value = "";
+            }
+        });
     </script>
 </body>
 </html>
