--- a/index.html
+++ b/index.html
@@ -7,25 +7,67 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            text-align: center;
             margin: 20px;
         }
-        #student-list li {
-            margin: 5px 0;
+        h1 {
+            color: #333;
         }
-        button {
-            margin-left: 10px;
+        #container {
+            margin: auto;
+            max-width: 400px;
+        }
+        input, button {
+            margin: 5px;
+            padding: 8px;
+            font-size: 14px;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin: 5px 0;
+            padding: 5px;
+            background-color: #f9f9f9;
+            border: 1px solid #ccc;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .delete-btn {
+            background-color: #ff5555;
+            color: white;
+            border: none;
+            padding: 5px 8px;
+            cursor: pointer;
+        }
+        .delete-btn:hover {
+            background-color: #e04444;
+        }
+        .student-link {
+            text-decoration: none;
+            color: #007BFF;
+            font-weight: bold;
+            cursor: pointer;
+        }
+        .student-link:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
     <h1>Liste des élèves</h1>
-    <input type="text" id="student-name" placeholder="Entrez un nom d'élève">
-    <button id="add-student">Ajouter</button>
-    <ul id="student-list"></ul>
+    <div id="container">
+        <input type="text" id="studentName" placeholder="Entrez le nom de l'élève">
+        <button onclick="addStudent()">Ajouter</button>
+        <ul id="studentList"></ul>
+    </div>
 
     <script>
-        // IndexedDB Helper Functions
-        function openDB() {
+        document.addEventListener("DOMContentLoaded", loadStudents);
+
+        async function openDB() {
             return new Promise((resolve, reject) => {
                 const request = indexedDB.open("projectDB", 1);
 
@@ -41,100 +83,58 @@
             });
         }
 
-        function saveStudents(students) {
-            return openDB().then((db) => {
-                return new Promise((resolve, reject) => {
-                    const transaction = db.transaction("students", "readwrite");
-                    const store = transaction.objectStore("students");
-
-                    // Clear existing data
-                    store.clear().onsuccess = () => {
-                        // Add new data
-                        students.forEach((student) => {
-                            store.add({ name: student });
-                        });
-                        transaction.oncomplete = resolve;
-                        transaction.onerror = reject;
-                    };
-                });
+        async function saveStudents() {
+            const ul = document.getElementById("studentList");
+            const students = [];
+            ul.querySelectorAll("li").forEach(li => {
+                const link = li.querySelector("a");
+                students.push({ name: link.textContent });
             });
+
+            const db = await openDB();
+            const transaction = db.transaction("students", "readwrite");
+            const store = transaction.objectStore("students");
+            store.clear();
+            students.forEach(student => store.add(student));
         }
 
-        function loadStudents() {
-            return openDB().then((db) => {
-                return new Promise((resolve, reject) => {
-                    const transaction = db.transaction("students", "readonly");
-                    const store = transaction.objectStore("students");
-                    const request = store.getAll();
+        async function loadStudents() {
+            const db = await openDB();
+            const transaction = db.transaction("students", "readonly");
+            const store = transaction.objectStore("students");
+            const request = store.getAll();
 
-                    request.onsuccess = () => resolve(request.result.map((entry) => entry.name));
-                    request.onerror = reject;
+            request.onsuccess = () => {
+                const students = request.result;
+                const ul = document.getElementById("studentList");
+                ul.innerHTML = "";
+                students.forEach(student => {
+                    const li = document.createElement("li");
+                    li.innerHTML = `<a href='eleve.html?name=${encodeURIComponent(student.name)}' class='student-link'>${student.name}</a> <button class='delete-btn' onclick='deleteStudent(this)'>Supprimer</button>`;
+                    ul.appendChild(li);
                 });
-            });
+            };
         }
 
-        // DOM Elements
-        const studentList = document.getElementById("student-list");
-        const studentNameInput = document.getElementById("student-name");
-        const addStudentButton = document.getElementById("add-student");
+        function addStudent() {
+            const input = document.getElementById("studentName");
+            const name = input.value.trim();
 
-        let students = [];
-
-        // Add student to list
-        function addStudent(name) {
-            if (!name.trim()) return;
-            students.push(name.trim());
-            renderStudents();
-            saveStudents(students).catch(console.error);
-        }
-
-        // Remove student from list
-        function removeStudent(index) {
-            students.splice(index, 1);
-            renderStudents();
-            saveStudents(students).catch(console.error);
-        }
-
-        // Render the list of students
-        function renderStudents() {
-            studentList.innerHTML = "";
-            students.forEach((student, index) => {
+            if (name) {
+                const ul = document.getElementById("studentList");
                 const li = document.createElement("li");
-                li.textContent = student;
-
-                const removeButton = document.createElement("button");
-                removeButton.textContent = "Supprimer";
-                removeButton.onclick = () => removeStudent(index);
-
-                li.appendChild(removeButton);
-                studentList.appendChild(li);
-            });
+                li.innerHTML = `<a href='eleve.html?name=${encodeURIComponent(name)}' class='student-link'>${name}</a> <button class='delete-btn' onclick='deleteStudent(this)'>Supprimer</button>`;
+                ul.appendChild(li);
+                saveStudents();
+                input.value = "";
+            }
         }
 
-        // Load students on page load
-        window.addEventListener("DOMContentLoaded", () => {
-            loadStudents()
-                .then((loadedStudents) => {
-                    students = loadedStudents;
-                    renderStudents();
-                })
-                .catch(console.error);
-        });
-
-        // Add student when clicking the button
-        addStudentButton.addEventListener("click", () => {
-            addStudent(studentNameInput.value);
-            studentNameInput.value = "";
-        });
-
-        // Add student on Enter key press
-        studentNameInput.addEventListener("keypress", (event) => {
-            if (event.key === "Enter") {
-                addStudent(studentNameInput.value);
-                studentNameInput.value = "";
-            }
-        });
+        function deleteStudent(button) {
+            const li = button.parentElement;
+            li.remove();
+            saveStudents();
+        }
     </script>
 </body>
 </html>
-
