--- a/eleve.html
+++ b/eleve.html
@@ -56,6 +56,11 @@
     <h2>Exercice 8 - Colorier les jours de la semaine</h2>
     <div id="exercice8"></div>
 </section>
+      
+<section>
+    <h2>Exercice 9 - Déplacer les images</h2>
+    <div id="exercice9"></div>
+</section>
 
    
 
@@ -74,6 +79,7 @@
   <script src="exercice7.js"></script>
   <script src="db.js"></script>
   <script src="exercice8.js"></script>
-
+  <script src="db.js"></script>
+  <script src="exercice9.js"></script>
 </body>
 </html>
