--- a/eleve.html
+++ b/eleve.html
@@ -59,7 +59,7 @@
       
 <section>
     <h2>Exercice 9 - Déplacer les images</h2>
-    <div id="exercice9"></div>
+    <div id="exercise9-container"></div>
 </section>
 
    
