--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ function resetDatabase() {
 
         deleteRequest.onsuccess = () => {
             // Réinitialiser la liste locale des élèves
-            students = []; // Assurez-vous que cette variable existe dans votre code principal
+            Students = []; // Assurez-vous que cette variable existe dans votre code principal
 
             alert("Toutes les données ont été réinitialisées !");
             location.reload(); // Recharge la page pour repartir à zéro
