--- a/eleve.html
+++ b/eleve.html
@@ -53,12 +53,12 @@
     <div id="exercice7"></div>
 </section>
 <section>
-    <h2>Exercice 8 - Colorier les jours de la semaine</h2>
+    <h2>Je reconnais des mots dans les 3 écritures</h2>
     <div id="exercice8"></div>
 </section>
       
 <section>
-    <h2>Exercice 9 - Déplacer les images</h2>
+    <h2>Je sais ranger du plus petit au plus grand</h2>
     <div id="exercise9-container"></div>
 </section>
 
