--- a/eleve.html
+++ b/eleve.html
@@ -42,7 +42,8 @@
   <section>
     <h2>Je sais lire les nombres</h2>
     <div id="exercice5"></div>
-  
+  </section>
+
   <section>
     <h2>Je reconnais les formes géométriques</h2>
     <div id="exercice6"></div>
