--- a/eleve.html
+++ b/eleve.html
@@ -65,6 +65,10 @@
     <div id="exercise9-container"></div>
 </section>
 
+<section>
+    <h2>mobiliser</h2>
+    <div id="exercise10"></div>
+</section>
    
 
     <script>
@@ -84,5 +88,7 @@
   <script src="exercice8.js"></script>
   <script src="db.js"></script>
   <script src="exercice9.js"></script>
+  <script src="db.js"></script>
+  <script src="exercice10.js"></script>
 </body>
 </html>
