--- a/eleve.html
+++ b/eleve.html
@@ -64,6 +64,11 @@
     <h2>Je sais ranger du plus petit au plus grand</h2>
     <div id="exercise9-container"></div>
 </section>
+<section>
+    <h2>Mobiliser les connaissances</h2>
+    <div id="exercise10"></div>
+</section>
+
 
 
    
@@ -85,6 +90,9 @@
   <script src="exercice8.js"></script>
   <script src="db.js"></script>
   <script src="exercice9.js"></script>
+  <script src="db.js"></script>
+  <script src="exercice10.js"></script>
+
  
 </body>
 </html>
