--- a/eleve.html
+++ b/eleve.html
@@ -19,6 +19,38 @@
             border: 1px solid #ccc;
             background-color: #ffffff;
         }
+    
+       section:nth-of-type(1) {
+           height: 10cm;
+       }
+       section:nth-of-type(2) {
+           height: 15cm;
+       }
+       section:nth-of-type(3) {
+           height: 12cm;
+       }
+       section:nth-of-type(4) {
+           height: 20cm;
+       }
+       section:nth-of-type(5) {
+           height: 8cm;
+       }
+       section:nth-of-type(6) {
+           height: 18cm;
+       }
+       section:nth-of-type(7) {
+           height: 14cm;
+       }
+       section:nth-of-type(8) {
+           height: 22cm;
+       }
+       section:nth-of-type(9) {
+           height: 25cm;
+       }
+       section:nth-of-type(10) {
+           height: 29cm;
+       }
+
     </style>
 </head>
 <body>
