--- a/eleve.html
+++ b/eleve.html
@@ -21,31 +21,31 @@
         }
     
        section:nth-of-type(1) {
-           height: 4cm;
+           min-height: 4cm;
        }
        section:nth-of-type(2) {
-           height: 4cm;
+           min-height: 4cm;
        }
        section:nth-of-type(3) {
-           height: 4.7cm;
+           min-height: 4.7cm;
        }
        section:nth-of-type(4) {
-           height: 7.5cm;
+           min-height: 7.5cm;
        }
        section:nth-of-type(5) {
-           height: 3cm;
+           min-height: 3cm;
        }
        section:nth-of-type(6) {
-           height: 13cm;
+           min-height: 13cm;
        }
        section:nth-of-type(7) {
            height: 18.5cm;
        }
        section:nth-of-type(8) {
-           height: 8cm;
+           min-height: 8cm;
        }
        section:nth-of-type(9) {
-           height: 20cm;
+           min-height: 20cm;
        }
        section:nth-of-type(10) {
            height: 28cm;
