--- a/eleve.html
+++ b/eleve.html
@@ -94,7 +94,7 @@
     <div id="exercise9-container"></div>
 </section>
 <section>
-    <img src="images2/lang.jpeg">
+    <img src="images2/lang.jpeg" width="14cm" >
     <h2>Mobiliser les connaissances</h2>
     <div id="exercise11"></div>
 </section>
