--- a/eleve.html
+++ b/eleve.html
@@ -94,7 +94,9 @@
     <div id="exercise9-container"></div>
 </section>
 <section>
-    <img src="images2/lang.jpeg" width="14cm" >
+    <section>
+         <img src="images2/lang.jpeg"  style="width: 14cm; height: auto;">
+    </section>
     <h2>Mobiliser les connaissances</h2>
     <div id="exercise11"></div>
 </section>
