--- a/eleve.html
+++ b/eleve.html
@@ -94,9 +94,10 @@
     <div id="exercise9-container"></div>
 </section>
 <section>
-    <section>
-         <img src="images2/lang.jpeg"  style="width: 20cm; height: auto;">
-    </section>
+   <section style="display: flex; justify-content: center; align-items: center; height: 4cm;">
+      <img src="images2/lang.jpeg" style="width: 15cm; height: auto;">
+   </section>
+
     <h2>Mobiliser les connaissances</h2>
     <div id="exercise11"></div>
 </section>
