--- a/eleve.html
+++ b/eleve.html
@@ -76,6 +76,9 @@
     <div id="exercice5"></div>
   </section>
   <section>
+      <br>
+  </section>
+  <section>
     <h2>Je reconnais les formes géométriques</h2>
     <div id="exercice6"></div>
   </section>
