--- a/eleve.html
+++ b/eleve.html
@@ -33,7 +33,7 @@
            min-height: 10cm;
        }
        section:nth-of-type(5) {
-           min-height: 7cm;
+           height: 10cm;
        }
        section:nth-of-type(6) {
            min-height: 13cm;
@@ -74,10 +74,8 @@
   <section>
     <h2>Je sais lire les nombres</h2>
     <div id="exercice5"></div>
-     <br><br>
   </section>
   <section>
-    <br><br>
     <h2>Je reconnais les formes géométriques</h2>
     <div id="exercice6"></div>
   </section>
