--- a/eleve.html
+++ b/eleve.html
@@ -39,7 +39,7 @@
            min-height: 13cm;
        }
        section:nth-of-type(7) {
-           min-height: 18.5cm;
+           height: 20cm;
        }
        section:nth-of-type(8) {
            min-height: 8cm;
