--- a/eleve.html
+++ b/eleve.html
@@ -45,7 +45,7 @@
            min-height: 8cm;
        }
        section:nth-of-type(9) {
-           min-height: 20cm;
+           height: 32cm;
        }
        section:nth-of-type(10) {
            height: 28cm;
