--- a/eleve.html
+++ b/eleve.html
@@ -93,7 +93,8 @@
     <h2>Je sais ranger du plus petit au plus grand</h2>
     <div id="exercise9-container"></div>
 </section>
-<section style="
+<section>
+ <section style="
     display: flex;
     justify-content: center;
     align-items: center;
@@ -103,12 +104,12 @@
     border: 1px solid #ccc;
     max-width: 50%;
     margin: auto;
-">
+ ">
     <h2 style="text-align: center; font-family: Arial, sans-serif; font-size: 20px; margin: 0;">
         Mobiliser le langage dans toutes ses dimensions : l'oral
     </h2>
     <br>
-</section>
+ </section>
 
     <div id="exercise11"></div>
 </section>
