--- a/eleve.html
+++ b/eleve.html
@@ -93,24 +93,11 @@
     <h2>Je sais ranger du plus petit au plus grand</h2>
     <div id="exercise9-container"></div>
 </section>
-<section>
- <section style="
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: auto;
-    background-color: #d4f5d4;
-    padding: 10px;
-    border: 1px solid #ccc;
-    max-width: 50%;
-    margin: auto;
- ">
-    <h2 style="text-align: center; font-family: Arial, sans-serif; font-size: 20px; margin: 0;">
-        Mobiliser le langage dans toutes ses dimensions : l'oral
-    </h2>
-    <br>
- </section>
 
+<section>
+    <div style="background-color: #d4f5d4; padding: 10px; border: 1px solid #ccc; max-width: 50%; margin: auto; text-align: center; font-family: Arial, sans-serif; font-size: 20px;">
+Mobiliser le langage dans toutes ses dimensions : l'oral
+</div>
     <div id="exercise11"></div>
 </section>
 
