--- a/eleve.html
+++ b/eleve.html
@@ -67,6 +67,10 @@
             /* Forcer un saut de page après la cinquième section */
             section:nth-of-type(5) {
                 page-break-after: always;
+             section:nth-of-type(7) {
+                page-break-after: always;
+             section:nth-of-type(9) {
+                page-break-after: always;
             }
         }
     </style>
