--- a/eleve.html
+++ b/eleve.html
@@ -67,9 +67,15 @@
             /* Forcer un saut de page après la cinquième section */
             section:nth-of-type(5) {
                 page-break-after: always;
-             section:nth-of-type(7) {
+            }
+
+            /* Forcer un saut de page après la 7 section */
+            section:nth-of-type(7) {
                 page-break-after: always;
-             section:nth-of-type(9) {
+            }
+
+            /* Forcer un saut de page après la 9 section */
+            section:nth-of-type(9) {
                 page-break-after: always;
             }
         }
