--- a/eleve.html
+++ b/eleve.html
@@ -90,7 +90,7 @@
         #exercise11 {
             display: grid;
             grid-template-columns: repeat(3, 1fr); /* 3 images par ligne */
-            gap: 10px; /* Espacement entre les images */
+            gap: 5px 10px; /* Espacement entre les images */
             justify-items: center; /* Centre les images dans chaque colonne */
             width: 100%; /* Prend toute la largeur disponible */
             margin: auto; /* Centre le conteneur sur la page */
