--- a/eleve.html
+++ b/eleve.html
@@ -150,6 +150,13 @@
         <br><br>
         <div id="exercise11"></div>
     </section>
+    <section>
+        <div style="background-color: #d4f5d4; padding: 10px; border: 1px solid #ccc; max-width: 50%; margin: auto; text-align: center; font-family: Arial, sans-serif; font-size: 20px;">
+            Mobiliser le langage dans toutes ses dimensions : l'écrit
+        </div>
+        <br><br>
+        <div id="exercise12"></div>
+    </section>
 
     <script>
         const params = new URLSearchParams(window.location.search);
@@ -170,5 +177,7 @@
     <script src="exercice9.js"></script>
     <script src="db.js"></script>
     <script src="exercice11.js"></script>
+    <script src="db.js"></script>
+    <script src="exercice12.js"></script>
 </body>
 </html>
