--- a/eleve.html
+++ b/eleve.html
@@ -151,7 +151,7 @@
         <div id="exercise11"></div>
     </section>
     <section>
-        <div style="background-color: #d4f5d4; padding: 10px; border: 1px solid #ccc; max-width: 50%; margin: auto; text-align: center; font-family: Arial, sans-serif; font-size: 20px;">
+        <div style="background-color: #FF6347; padding: 10px; border: 1px solid #ccc; max-width: 50%; margin: auto; text-align: center; font-family: Arial, sans-serif; font-size: 20px;">
             Mobiliser le langage dans toutes ses dimensions : l'écrit
         </div>
         <br><br>
