--- a/eleve.html
+++ b/eleve.html
@@ -51,7 +51,9 @@
         section:nth-of-type(10) {
             min-height: 20cm;
         }
-
+        section:nth-of-type(11) {
+            min-height: 20cm;
+        }
         /* Styles pour l'impression */
         @media print {
             @page {
@@ -78,6 +80,11 @@
             section:nth-of-type(9) {
                 page-break-after: always;
             }
+            
+            /* Forcer un saut de page après la 10 section */
+            section:nth-of-type(10) {
+                page-break-after: always;
+            }
 
             /* Empêcher les images d'être coupées entre deux pages */
             img {
@@ -98,6 +105,21 @@
         }
 
         #exercise11 img {
+            max-width: 100%; /* Les images occupent toute la colonne */
+            height: auto;
+            display: block;
+        }
+        #exercise12 {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr); /* 3 images par ligne */
+            gap: 5px 10px; /* Espacement entre les images */
+            justify-items: center; /* Centre les images horizontalement dans chaque colonne */
+            align-items: center; /* Centre les images verticalement dans chaque cellule */
+            width: 100%; /* Prend toute la largeur disponible */
+            margin: auto; /* Centre le conteneur sur la page */
+        }
+
+        #exercise12 img {
             max-width: 100%; /* Les images occupent toute la colonne */
             height: auto;
             display: block;
