--- a/eleve.html
+++ b/eleve.html
@@ -25,7 +25,7 @@
         @media print {
             @page {
                 size: A4;
-                margin: 1cm;
+                margin: 1.27cm;
             }
             body {
                 margin: 0;
@@ -33,7 +33,12 @@
             }
             
             section:nth-of-type(6),
-            section:nth-of-type(8) {
+            section:nth-of-type(8),
+            section:nth-of-type(10),
+            section:nth-of-type(11),
+            section:nth-of-type(12),
+            section:nth-of-type(13),
+            section:nth-of-type(14) {
                 page-break-before: always;
             }
             
