--- a/eleve.html
+++ b/eleve.html
@@ -130,6 +130,10 @@
         <div id="exercise9-container"></div>
     </section>
     <section>
+        <h2>Je sais ranger dans lordre chronologique</h2>
+        <div id="exercise10-container"></div>
+    </section>
+    <section>
         <div style="background-color: #d4f5d4; padding: 10px; border: 1px solid #ccc; max-width: 50%; margin: auto; text-align: center; font-family: Arial, sans-serif; font-size: 20px;">
             Mobiliser le langage dans toutes ses dimensions : l'oral
         </div>
@@ -181,6 +185,7 @@
     <script src="exercice7.js"></script>
     <script src="exercice8.js"></script>
     <script src="exercice9.js"></script>
+    <script src="exercice10.js"></script>
     <script src="exercice11.js"></script>
     <script src="exercice12.js"></script>
     <script src="exercice13.js"></script>
