--- a/eleve.html
+++ b/eleve.html
@@ -130,7 +130,7 @@
         <div id="exercise9-container"></div>
     </section>
     <section>
-        <h2>Je sais ranger dans lordre chronologique</h2>
+        <h2>Je sais ranger dans l'ordre chronologique</h2>
         <div id="exercise10-container"></div>
     </section>
     <section>
